# ambient-expoense-agent

./: Makefile  README.md  agents-cli-manifest.yaml  deploy_prod.ps1  deploy_prod.sh  deployment_metadata.json  pyproject.toml
app/: agent.py
artifacts/grade_results/: results_20260619_225159.html  results_20260619_225159.json  results_20260619_225235.html  results_20260619_225235.json  results_20260619_225405.html  results_20260619_225405.json  results_20260619_225426.html  results_20260619_225426.json  results_20260619_225634.html  results_20260619_225634.json  results_20260619_230610.html  results_20260619_230610.json  results_20260619_230654.html  results_20260619_230654.json  results_20260619_230757.html  results_20260619_230757.json  results_20260619_230824.html  results_20260619_230824.json  results_20260619_230856.html  results_20260619_230856.json  results_20260619_231111.html  results_20260619_231111.json  results_20260619_231200.html  results_20260619_231200.json
artifacts/traces/: generated_traces.json
deployment/terraform/single-project/: backend.tf
deployment/terraform/single-project/vars/: prod.tfvars
expense_agent/: agent.py  agent_runtime_app.py  config.py
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/: conftest.py
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
