[project]
name = "manager-dashboard"
version = "0.1.0"
description = "FastAPI Manager Dashboard for Ambient Expense Agent"
dependencies = [
    "fastapi",
    "uvicorn",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines]>=1.156.0",
    "pydantic",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
